# cardopedia

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
cardopedia/: card.py  card_name.py  cardpedia.py  category.py  category_name.py  generate_makes.py  generate_sources.py  group.py  group_name.py  kebab_case.py  main.py  ordered_str_enum.py  populate.py  populate_fish.py  populate_food.py  populate_humans.py  populate_ideas.py  populate_locations.py  populate_mobs.py  populate_packs.py  populate_resources.py  populate_rumors.py  populate_structures.py  rename_images.py
cardopedia/enums/: card_name.py  category_name.py  group_name.py
cardopedia/generate_groups/: generate_makes.py  generate_sources.py
cardopedia/populate_cards/: populate.py  populate_fish.py  populate_food.py  populate_humans.py  populate_ideas.py  populate_locations.py  populate_mobs.py  populate_packs.py  populate_resources.py  populate_rumors.py  populate_structures.py
cardopedia/support_modules/: rename_images.py
tests/: card_name_test.py  card_test.py  cardopedia_project_test.py  cardpedia_test.py  category_name_test.py  category_test.py  conftest.py  generate_makes_test.py  generate_sources_test.py  group_name_test.py  group_test.py  kebab_case_test.py  ordered_str_enum_test.py  populate_test.py  pytest.ini
tests/fixtures/: cleanup_files.py
webpage/: index.html
webpage/icons/: browserconfig.xml
webpage/scripts/: jquery-3.6.1.js  toggle.js
webpage/styles/: cardopedia.css
