[tool.poetry]
name = "cardopedia"
version = "0.0.1"
description = ""
license = "MIT"
authors = ["BarbarianBunny <carury@gmail.com>"]
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = []
classifiers = [
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
coverage = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
